Late updates to talk

--- a/Lecture/Slides/InConclusion.tex
+++ b/Lecture/Slides/InConclusion.tex
@@ -19,7 +19,7 @@ A public GitHub repository will be available with
 		 	So on the tip of his subduing tongue\\
 		 	All kind of arguments and question deep,\\
 		 	All replication prompt and strong,\\
-		 	For his advantage still did wake and sleep.\\
+		 	For [our] advantage still did wake and sleep.\\
 		 {\qquad\qquad--- \textit{A Lover's Complaint}} %120--123
 	\end{quotation}
 	
