--- a/Lecture/Slides/ReproResearchElements.tex
+++ b/Lecture/Slides/ReproResearchElements.tex
@@ -4,12 +4,12 @@
 	
 	\bigskip
 
-Components of a research project compendium that affect reproducibility:
+Elements needed for reproducibility:
 	\begin{enumerate}
-		\item the underlying data,
-		\item the computer programs or scripts used for calculation,
-		\item the hardware and operating system under which those programs were run, and
-		\item the choices of inputs to the calculations, and the process by which those choices were made.
+		\item the underlying \z{data},
+		\item the \z{computer programs} or scripts used for calculation,
+		\item the \z{computing environment} (hardware and OS) under which those programs were run, and
+		\item the choices of \z{inputs to the calculations}.
 	\end{enumerate}
 \end{frame}
 
